--- a/style/modify.css
+++ b/style/modify.css
@@ -44,10 +44,13 @@
     @media only screen and (max-width:767px){
         header h1{
             margin: 150px 0px 100px 50%;
+            font-size:20px;
 
         }
         header h2{
             margin: 200px 0px 100px 50%;
+            font-size:20px;
+
         }
         .mountain{
             margin:0px 0px 0px 20%;
@@ -82,10 +85,14 @@
     @media only screen and (max-width:425px){
         header h1{
             margin: 100px 0px 150px 30%;
+            font-size:15px;
+
 
         }
         header h2{
             margin: 150px 0px 50% 30%;
+            font-size:15px;
+
         }
         .first {
             margin-left: 10%;
